# devkit-for-opencode

./: .env.example  .gitignore  .graphifyignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  DONE.md  FEATURES.md  Makefile  README.md  TASKS.md  TODO.md  main.py  pyproject.toml  start.sh
.opencode/: opencode.json
.opencode/tools/: config-lint.ts  devkit-analyze.ts  health-score.ts
api/: __init__.py  main.py  schemas.py  utils.py
api/routes/: analyze.py  audit.py  config.py  diff.py  graph.py  history.py  migrate.py  recommendations.py  score.py
command/: log-n-push.md
devkit/: __init__.py  cli.py
examples/: bad-config.json  good-config.json  minimal-config.json
graphify-out/: .graphify_detect.json  .graphify_python  .graphify_uncached.txt
knowledge/: acp-support.md  agent-skills.md  agents-config.md  commands.md  config-main.md  custom-tools.md  formatters.md  keybinds.md  lsp-servers.md  mcp-servers.md  models.md  permissions.md  rules.md  themes.md  tools.md
tests/: __init__.py  conftest.py  test_agent_analyzer.py  test_cli.py  test_command_analyzer.py  test_config_auditor.py  test_config_diff.py  test_config_reader.py  test_full_audit.py  test_graph_builder.py  test_mcp_analyzer.py  test_memory.py  test_migration_assistant.py  test_optimization_advisor.py  test_orchestrator.py  test_permission_analyzer.py  test_phase9.py  test_placeholder.py  test_report_generator.py  test_security_scan.py  test_skill_analyzer.py  test_token_optimization.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/src/: App.tsx  (+1 more)
(+47 files in other folders)
